@@ -18,6 +18,8 @@ ncclimo
 .IR clm_md ]
 [\-c
 .IR caseid ]
+[\--cmp_sng=
+.IR cmp_sng ]
 [\-d
 .IR dbg_lvl ] 
 [\--d2f]
