@@ -18,6 +18,8 @@ ncremap
 [\--add_fll]
 [\--alg_lst]
 [\--area_dgn]
+[\--cmp_sng=
+.IR cmp_sng ]
 [\-D
 .IR dbg_lvl ] 
 [\-d
